--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.header-bar {
+  height: 150px;
+  align-items: center;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  background-color: #ffffff;
+  padding: 10px;
+  /*position: fixed;*/
+}
+.header-title {
+  color: black;
+  flex: 1;
+}
+.search-bar {
+  flex: 1;
+  border: black;
+}
+.search-bar .react-search-field-input {
+  padding: 0px !important;
+  margin-left: 5px;
+  font-weight: 500 !important;
+  color: black !important;
+}
+.search-bar .react-search-field.search-bar {
+  width: 300px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (min-width: 415px){
+  .header-bar {
+    flex-direction: row;
+    height: 100px;
   }
-  to {
-    transform: rotate(360deg);
+  .header-title {
+    text-align: left;
+    margin: 10px
   }
 }
+@media screen and (min-width: 1015px){
+  .coupon-container .rct-grid-row-top {
+    margin-right: 0px!important;
+  }
+}
+.coupon-container {
+  flex: 1;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.coupon-container .rct-grid-col-lg-3, .coupon-container .rct-grid-col-md-4,
+.coupon-container .rct-grid-col-sm-6, .coupon-container .rct-grid-col-xs-12 {
+  padding: 10px;
+  margin: auto;
+}
+
